--- a/main.bib
+++ b/main.bib
@@ -529,3 +529,14 @@ author = {Li, Yanjie and Wei, Wu and Gao, Yong and Wang, Dongliang and Fan, Zhun
   year={2000},
   publisher={Taylor \& Francis Ltd.}
 }
+
+% rrt-connect
+@inproceedings{kuffner2000rrt,
+  title={RRT-connect: An efficient approach to single-query path planning},
+  author={Kuffner, James J and LaValle, Steven M},
+  booktitle={Proceedings 2000 ICRA. Millennium Conference. IEEE International Conference on Robotics and Automation. Symposia Proceedings (Cat. No. 00CH37065)},
+  volume={2},
+  pages={995--1001},
+  year={2000},
+  organization={IEEE}
+}
